--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
 }
 
 .menu {
+  padding-right: 41px;
   margin-right: 37px;
   padding: 6px 6px 6px 6px;
   border-radius: 2px;
@@ -106,6 +107,10 @@
   padding-right: 41px;
 }
 
+.label {
+  background: #F1E4E6;
+}
+
 .label_block {
   width: 100%;
   display: -webkit-box;
@@ -154,13 +159,12 @@
 }
 
 .dir {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   position: relative;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -198,11 +202,6 @@
 .dir_text a {
   text-decoration: none;
   color: #FFFFFF;
-}
-
-.dir_text a:hover {
-  text-decoration: none;
-  color: #f16d7f;
 }
 
 .colored_text {
@@ -840,6 +839,10 @@
   text-decoration: none;
 }
 
+.filter_list a:hover {
+  text-decoration: underline;
+}
+
 .fa-angle-down {
   font-size: 14px;
   line-height: 17px;
@@ -889,5 +892,63 @@
 .checkbox {
   border: 1px solid #EBEBEB;
   margin-right: 5px;
+}
+
+.pagination_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-top: 63px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #EBEBEB;
+  border-radius: 3px;
+  padding: 15px;
+}
+
+.pag_item {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-decoration: none;
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #9F9F9F;
+}
+
+.pag_item:hover {
+  color: #9F9F9F;
+  text-decoration: underline;
+}
+
+.active {
+  color: #F16D7F;
+}
+
+.ltgt {
+  color: #000000;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.ltgt:hover {
+  color: #000000;
+  font-weight: bold;
+  text-decoration: none;
 }
 /*# sourceMappingURL=style.css.map */
