--- a/style.scss
+++ b/style.scss
@@ -37,6 +37,7 @@
 }
 
 .menu {
+    padding-right: 41px;
     margin-right: 37px;
     padding: 6px 6px 6px 6px;
     border-radius: 2px;
@@ -61,7 +62,7 @@
     box-shadow: 5px 10px 20px rgba(53, 110, 173, 0.2);
     padding: 10px 10px 200px 20px;
     display: none;
-
+    z-index: 1;
 }
 
 
@@ -89,10 +90,15 @@
 
 .menu_link:hover {
     text-decoration: underline;
+
 }
 
 .profile {
     padding-right: 41px;
+}
+
+.label {
+    background: #F1E4E6;
 }
 
 .label_block {
@@ -123,12 +129,13 @@
 }
 
 .dir {
-    display: flex;
     position: relative;
     flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+
+
 }
 
 .dir_margin {
@@ -159,10 +166,7 @@
     color: #FFFFFF;
 }
 
-.dir_text a:hover {
-    text-decoration: none;
-    color: #f16d7f;
-}
+
 
 .colored_text {
     font-family: 'Lato';
@@ -171,6 +175,7 @@
     line-height: 35px;
     text-align: center;
     color: #f16d7f;
+
 }
 
 .hover-this:hover span {
@@ -298,7 +303,7 @@
 }
 
 .add_to_cart_txt {
-    padding-left: 12px;
+    padding-left: 10px;
     font-family: 'Lato';
     font-style: normal;
     font-weight: 400;
@@ -503,51 +508,487 @@
     justify-content: space-between;
     height: 100%;
     align-items: center;
-
 }
 
 .link {
-    display: block;
+    display: flex;
     height: 32px;
     width: 32px;
     background-color: #fff;
     margin-left: 7px;
-    background-position: center;
-    background-repeat: no-repeat;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 }
 
-.link_f {
-    background-image: url(img/f.png);
-}
 
-.link_i {
-    background-image: url(img/i.png);
-}
 
-.link_p {
-    background-image: url(img/p.png);
-}
-
-.link_t {
-    background-image: url(img/t.png);
-}
 
 .link:hover {
     background-color: #E05C6E;
 }
 
-.link_f:hover {
-    background-image: url(img/fb.png);
+
+
+.fa-cart-shopping {
+    font-size: 22px;
+    color: #fff;
+
 }
 
-.link_i:hover {
-    background-image: url(img/ib.png);
+.fa-facebook-f,
+.fa-instagram,
+.fa-pinterest-p,
+.fa-twitter {
+    color: #000;
+    font-size: 15px;
 }
 
-.link_p:hover {
-    background-image: url(img/pb.png);
+.link:hover .fa-facebook-f {
+    color: #fff;
 }
 
-.link_t:hover {
-    background-image: url(img/tb.png);
+.link:hover .fa-instagram {
+    color: #fff;
+}
+
+.link:hover .fa-pinterest-p {
+    color: #fff;
+}
+
+.link:hover .fa-twitter {
+    color: #fff;
+}
+
+/*catalog.html*/
+$color_rose: #F16D7F;
+$nav_bg: #F8F3F4;
+
+
+
+.nav_all {
+    background-color: $nav_bg;
+}
+
+.nav_items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 148px;
+}
+
+.catalog_name {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #E05C6E;
+}
+
+
+.breadcrumb-item_custom a {
+    color: #636363;
+    text-decoration: none;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.breadcrumb-item_custom a:hover {
+    text-decoration: underline;
+}
+
+.active_custom {
+    color: $color_rose;
+    font-weight: bold;
+}
+
+.filter_all_items {
+    height: 116px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.filter_link {
+    display: flex;
+    position: relative;
+}
+
+.filter_link a {
+    text-decoration: none;
+}
+
+.filter_txt {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    padding-top: 13px;
+    padding-left: 17px;
+    text-transform: uppercase;
+}
+
+.filter_img {
+    margin-left: 10px;
+}
+
+
+
+.filter_menu_box {
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    width: 360px;
+    position: absolute;
+    top: -13px;
+    left: 0px;
+    box-shadow: 5px 10px 20px rgba(53, 110, 173, 0.2);
+    padding: 13px 15px 17px 17px;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    display: none;
+    opacity: 0.95;
+
+}
+
+.filter_txt_menu {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: $color_rose;
+    padding-top: 13px;
+    padding-left: 0px;
+    text-transform: uppercase;
+}
+
+.filter_menu_header {
+    padding-top: 14px;
+    border-bottom: 1px solid #EBEBEB;
+}
+
+
+.filter_menu_item {
+    display: block;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    padding-top: 11px;
+    text-decoration: none;
+    padding-left: 17px;
+}
+
+.filter_menu_item:hover {
+    text-decoration: underline;
+    color: #6F6E6E;
+}
+
+.filter_menu_item:last-of-type {
+    padding-bottom: 12px;
+}
+
+.filter_menu_item:first-of-type {
+    padding-top: 24px;
+}
+
+.filter_link:hover .filter_menu_box {
+    display: flex;
+}
+
+.filter_lists_all {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+}
+
+.filter_list a {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    padding-right: 28px;
+    text-decoration: none;
+}
+
+.filter_list a:hover {
+    text-decoration: underline;
+}
+
+.fa-angle-down {
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.filter_size {
+    position: relative;
+}
+
+.filter_size:hover .size_menu_box {
+    display: block;
+}
+
+.size_menu_box {
+    position: absolute;
+    width: 80px;
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    box-shadow: 5px 10px 20px rgba(53, 110, 173, 0.2);
+    padding: 10px 20px 10px 10px;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    opacity: 0.95;
+    display: none;
+}
+
+.size_menu_item {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    color: #6F6E6E;
+}
+
+.checkbox {
+    border: 1px solid #EBEBEB;
+    margin-right: 5px;
+}
+
+.pagination_box {
+    display: flex;
+    width: 100%;
+    margin-top: 63px;
+    justify-content: center;
+}
+
+.pagination {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    border: 1px solid #EBEBEB;
+    border-radius: 3px;
+    padding: 15px;
+}
+
+.pag_item {
+    padding-left: 10px;
+    padding-right: 10px;
+    text-decoration: none;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+    color: #9F9F9F;
+}
+
+.pag_item:hover {
+    color: #9F9F9F;
+    text-decoration: underline;
+}
+
+.active_page {
+    color: $color_rose;
+}
+
+.ltgt {
+    color: #000000;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.ltgt:hover {
+    color: #000000;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+/*product page*/
+
+.carousel_folder {
+    padding: 0;
+}
+
+.carousel {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    background: #F7F7F7
+}
+
+.carousel_folder .carousel-item {
+    height: 724px;
+}
+
+.carousel-item img {
+    height: 724px;
+    width: 482px;
+
+}
+
+.carousel.pointer-event {
+    touch-action: pan-y
+}
+
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    width: 482px;
+    height: 724px;
+}
+
+.carousel-inner::after {
+    display: block;
+    clear: both;
+    content: ""
+}
+
+.carousel-item {
+    position: relative;
+    display: none;
+    float: left;
+    width: 100%;
+    margin-right: -100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    transition: transform .6s ease-in-out
+}
+
+
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+    display: block
+}
+
+.active.carousel-item-end,
+.carousel-item-next:not(.carousel-item-start) {
+    transform: translateX(100%)
+}
+
+.active.carousel-item-start,
+.carousel-item-prev:not(.carousel-item-end) {
+    transform: translateX(-100%)
+}
+
+.carousel-fade .carousel-item {
+    opacity: 0;
+    transition-property: opacity;
+    transform: none;
+}
+
+.carousel-fade .carousel-item-next.carousel-item-start,
+.carousel-fade .carousel-item-prev.carousel-item-end,
+.carousel-fade .carousel-item.active {
+    z-index: 1;
+    opacity: 1
+}
+
+.carousel-fade .active.carousel-item-end,
+.carousel-fade .active.carousel-item-start {
+    z-index: 1;
+    opacity: 1;
+    transition: none;
+}
+
+
+
+.carousel-control-next,
+.carousel-control-prev {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 33px;
+    padding: 0;
+    background: 0 0;
+    border: 0;
+}
+
+
+
+.carousel-control-next:focus,
+.carousel-control-next:hover,
+.carousel-control-prev:focus,
+.carousel-control-prev:hover {
+    color: #fff;
+    text-decoration: none;
+    outline: 0;
+    opacity: 100%;
+}
+
+
+
+.carousel-control-prev {
+    left: 0
+}
+
+.carousel-control-next {
+    right: 0
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+    display: inline-block;
+
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 100% 100%;
+    opacity: 100%;
+}
+
+.carousel-control-prev-icon {
+    background-image: url("img/prev.png");
+}
+
+.carousel-control-next-icon {
+    background-image: url("img/next.png");
+}
+
+.carousel-control-next-icon:hover {
+    background-image: url("img/next_hover.png");
+}
+
+.carousel-control-prev-icon:hover {
+    background-image: url("img/prev_hover.png");
+}
+
+.product_banner_container {
+    position: relative;
+    height: 300px;
+}
+
+.product_banner {
+    position: absolute;
+    width: 1140px;
+    z-index: 1;
+    border: 1px solid #EAEAEA;
+    top: -55px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    height: 200px;
+    background-color: #fff;
+    opacity: 70%;
+    text-align: center;
 }
