--- a/style.scss
+++ b/style.scss
@@ -339,6 +339,7 @@
 
 .browse_button:hover {
     background: #000;
+    cursor: pointer;
 }
 
 .footer {
@@ -386,7 +387,7 @@
     background-image: url("img/sea_background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-   
+
     min-height: 448px;
     background-position: left bottom;
 
@@ -483,6 +484,7 @@
 
 .subscribe_button:hover {
     background: #000;
+    cursor: pointer;
 }
 
 
@@ -991,31 +993,58 @@ $nav_bg: #F8F3F4;
     background-color: #fff;
     opacity: 70%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+
+}
+
+.product_banner_header {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+    text-align: center;
+    padding-top: 64px;
+
+}
+
+.line1 {
+    width: 63px;
+    height: 3px;
+    background-color: #EF5B70;
+    align-self: center;
+
 }
 
 /*registration*/
-.registration_box{
+.registration_box {
     display: flex;
     justify-content: space-between;
     margin-top: 31px;
-    width:100%
+    width: 100%
 }
-.registration_form{
+
+.registration_form {
     display: flex;
     flex-direction: column;
-    width:35%;
-    min-width:360px;
+    width: 35%;
+    min-width: 360px;
 }
+
 .reg_label {
     font-family: 'Lato';
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
     line-height: 19px;
-    color: #222222; 
-    padding-top:33px;   
+    color: #222222;
+    padding-top: 33px;
 }
-.reg_input{
+
+.reg_input {
     border: 1px solid #A4A4A4;
     font-family: 'Lato';
     font-style: normal;
@@ -1028,7 +1057,8 @@ $nav_bg: #F8F3F4;
     padding-left: 16px;
     margin-top: 20px;
 }
-.form_txt{
+
+.form_txt {
     font-family: 'Lato';
     font-style: normal;
     font-weight: 300;
@@ -1038,16 +1068,18 @@ $nav_bg: #F8F3F4;
     margin-top: 16px;
     margin-bottom: 39px;
 }
-.reg_label span{
+
+.reg_label span {
     padding-right: 20px;
     padding-left: 10px;
 }
-.form_spacing
-{
-    width:10%;
+
+.form_spacing {
+    width: 10%;
 }
-.registration_information{
-    width:55%;
+
+.registration_information {
+    width: 55%;
     padding-top: 33px;
     font-family: 'Lato';
     font-style: normal;
@@ -1056,21 +1088,30 @@ $nav_bg: #F8F3F4;
     line-height: 30px;
     color: #000000;
 }
-.join_now{
-padding-left:29px;
 
-width:130px;
+.join_now {
+    padding-left: 29px;
+    width: 160px;
+
 }
-.fa-arrow-right{
-padding-left:20px;
+
+.join_now:hover {
+    cursor: pointer;
 }
-.reg_list{
+
+.fa-arrow-right {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.reg_list {
     list-style-image: url(img/list_item.png);
     padding-left: 25px;
     padding-top: 15px;
-   
+
 }
-.reg_list_item{
+
+.reg_list_item {
     line-height: 50px;
     padding-left: 10px;
 }
