--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 .container {
   max-width: 1140px;
-  margin: 0 auto;
+  /* margin: 0 auto;*/
 }
 
 .top_menu {
@@ -249,9 +249,8 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  width: 100%;
+  height: 200px;
 }
 
 .item {
@@ -1118,20 +1117,18 @@
 .product_banner_container {
   position: relative;
   height: 300px;
+  background-color: #F16D7F;
 }
 
 .product_banner {
   position: absolute;
-  width: 1140px;
   z-index: 1;
   border: 1px solid #EAEAEA;
   top: -55px;
   left: 50%;
   -webkit-transform: translate(-50%, 0%);
           transform: translate(-50%, 0%);
-  height: 200px;
   background-color: #fff;
-  opacity: 70%;
   text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1162,6 +1159,37 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.subheader {
+  font-size: 18px;
+  line-height: 22px;
+  color: #4D4D4D;
+  padding-top: 0;
+}
+
+.product_banner_txt {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #5E5E5E;
+  padding-top: 48px;
+}
+
+.product_banner_price {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #EF5B70;
+  padding-top: 32px;
+  padding-bottom: 65px;
 }
 
 /*registration*/
