--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,7 @@
 
 .container {
     max-width: 1140px;
-    margin: 0 auto;
+    /* margin: 0 auto;*/
 
 }
 
@@ -213,7 +213,8 @@
 .item_flex {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    width: 100%;
+    height: 200px;
 }
 
 .item {
@@ -221,7 +222,6 @@
     position: relative;
     width: 360px;
     margin-top: 30px;
-
 }
 
 .item:hover .item_img {
@@ -979,24 +979,21 @@ $nav_bg: #F8F3F4;
 .product_banner_container {
     position: relative;
     height: 300px;
+    background-color: #F16D7F;
 }
 
 .product_banner {
     position: absolute;
-    width: 1140px;
     z-index: 1;
     border: 1px solid #EAEAEA;
     top: -55px;
     left: 50%;
     transform: translate(-50%, 0%);
-    height: 200px;
     background-color: #fff;
-    opacity: 70%;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-content: center;
-
 }
 
 .product_banner_header {
@@ -1008,7 +1005,6 @@ $nav_bg: #F8F3F4;
     color: #F16D7F;
     text-align: center;
     padding-top: 64px;
-
 }
 
 .line1 {
@@ -1016,7 +1012,38 @@ $nav_bg: #F8F3F4;
     height: 3px;
     background-color: #EF5B70;
     align-self: center;
+    margin-top: 12px;
+    margin-bottom: 12px;
 
+}
+
+.subheader {
+    font-size: 18px;
+    line-height: 22px;
+    color: #4D4D4D;
+    padding-top: 0;
+}
+
+.product_banner_txt {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #5E5E5E;
+    padding-top: 48px;
+}
+
+.product_banner_price {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: #EF5B70;
+    padding-top: 32px;
+    padding-bottom: 65px;
 }
 
 /*registration*/
