--- a/style.css
+++ b/style.css
@@ -252,6 +252,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .item {
@@ -887,6 +890,7 @@
   font-size: 14px;
   line-height: 30px;
   color: #6F6E6E;
+  text-align: left;
 }
 
 .checkbox {
@@ -1117,7 +1121,7 @@
 
 .product_banner_container {
   position: relative;
-  height: 300px;
+  height: 600px;
 }
 
 .product_banner {
@@ -1129,9 +1133,8 @@
   left: 50%;
   -webkit-transform: translate(-50%, 0%);
           transform: translate(-50%, 0%);
-  height: 200px;
   background-color: #fff;
-  opacity: 70%;
+  opacity: 90%;
   text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1155,13 +1158,88 @@
   padding-top: 64px;
 }
 
-.line1 {
+.product_banner_line_color {
   width: 63px;
   height: 3px;
   background-color: #EF5B70;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  margin-bottom: 12px;
+  margin-top: 12px;
+}
+
+.product_banner_subheader {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 22px;
+  color: #4D4D4D;
+}
+
+.product_banner_txt {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  color: #5E5E5E;
+  padding-top: 48px;
+  max-width: 555px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.product_banner_price {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #F16D7F;
+  padding-top: 32px;
+}
+
+.product_banner_line_grey {
+  width: 640px;
+  height: 1px;
+  background-color: #c4c4c4;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin-bottom: 65px;
+  margin-top: 65px;
+}
+
+.filter_lists_product {
+  padding-bottom: 48px;
+}
+
+.add_to_cart_item_product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  text-decoration: none;
+  border: 1px solid #F16D7F;
+  -ms-flex-item-align: center;
+      align-self: center;
+  margin-bottom: 65px;
+}
+
+.add_to_cart_item_product:hover {
+  border: 1px solid #000;
+}
+
+.add_to_cart_item_product:hover .colored {
+  color: #000;
+}
+
+.colored {
+  color: #F16D7F;
 }
 
 /*registration*/
