--- a/style.scss
+++ b/style.scss
@@ -210,10 +210,13 @@
     margin-top: 10px;
 }
 
+
+
 .item_flex {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    flex-grow: 1;
 }
 
 .item {
@@ -765,6 +768,7 @@ $nav_bg: #F8F3F4;
     font-size: 14px;
     line-height: 30px;
     color: #6F6E6E;
+    text-align: left;
 }
 
 .checkbox {
@@ -978,7 +982,7 @@ $nav_bg: #F8F3F4;
 
 .product_banner_container {
     position: relative;
-    height: 300px;
+    height: 600px;
 }
 
 .product_banner {
@@ -989,9 +993,8 @@ $nav_bg: #F8F3F4;
     top: -55px;
     left: 50%;
     transform: translate(-50%, 0%);
-    height: 200px;
     background-color: #fff;
-    opacity: 70%;
+    opacity: 90%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -1011,13 +1014,83 @@ $nav_bg: #F8F3F4;
 
 }
 
-.line1 {
+.product_banner_line_color {
     width: 63px;
     height: 3px;
     background-color: #EF5B70;
     align-self: center;
-
+    margin-bottom: 12px;
+    margin-top: 12px;
 }
+
+.product_banner_subheader {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 22px;
+    color: #4D4D4D;
+}
+
+.product_banner_txt {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #5E5E5E;
+    padding-top: 48px;
+    max-width: 555px;
+    align-self: center;
+}
+
+.product_banner_price {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: $color_rose;
+    padding-top: 32px;
+}
+
+.product_banner_line_grey {
+    width: 640px;
+    height: 1px;
+    background-color: #c4c4c4;
+    align-self: center;
+    margin-bottom: 65px;
+    margin-top: 65px;
+}
+
+.filter_lists_product {
+    padding-bottom: 48px;
+}
+
+
+
+.add_to_cart_item_product {
+    display: flex;
+    padding: 10px;
+    text-decoration: none;
+    border: 1px solid $color_rose;
+    align-self: center;
+    margin-bottom: 65px;
+}
+
+.add_to_cart_item_product:hover {
+    border: 1px solid #000;
+}
+
+.add_to_cart_item_product:hover .colored {
+    color: #000;
+}
+
+.colored {
+    color: $color_rose;
+}
+
 
 /*registration*/
 .registration_box {
