--- a/style.scss
+++ b/style.scss
@@ -32,6 +32,8 @@
     padding-right: 41px;
 }
 
+
+
 .spacing {
     flex-grow: 1;
 }
@@ -42,15 +44,14 @@
     padding: 6px 6px 6px 6px;
     border-radius: 2px;
     position: relative;
+    transition: background 0.5s;
+
 }
 
 .menu:hover {
     background-color: #E05C6E;
 }
 
-.menu:hover .menu_box {
-    display: flex;
-}
 
 .menu_box {
     background-color: #FFFFFF;
@@ -63,6 +64,40 @@
     padding: 10px 10px 200px 20px;
     display: none;
     z-index: 1;
+}
+
+/*
+ * ----------------------------------------
+ * animation fade-in
+ * ----------------------------------------
+ */
+@-webkit-keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.fade-in {
+    -webkit-animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+    animation: fade-in 0.5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+.menu:hover .menu_box {
+    display: flex;
 }
 
 
@@ -106,19 +141,32 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    height: 764px;
 }
 
-.lb_foto {
-    flex-grow: 1;
+.lb_foto_box {
     align-items: flex-start;
+    width: 50%;
+    height: 100%;
+}
+
+
+.label_foto {
+    height: 100%;
+    background-image: url(img/gr_foto.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center left;
+
 }
 
 .label_logo {
-    flex-grow: 1;
+    width: 50%;
     align-items: flex-start;
     padding-left: 63px;
     display: flex;
     padding-top: 290px;
+
 }
 
 .catalogs_list {
@@ -238,6 +286,8 @@
 .item_link {
     display: block;
     text-decoration: none;
+
+
 }
 
 .item_header:hover {
@@ -250,6 +300,8 @@
 
 .item_img {
     width: 100%;
+    transition: all 0.7s;
+
 }
 
 .item_description {
@@ -338,6 +390,7 @@
     border: transparent;
     padding-left: 7px;
     padding-right: 7px;
+    transition: background 0.5s;
 }
 
 .browse_button:hover {
@@ -483,6 +536,7 @@
     border: transparent;
     padding-left: 7px;
     padding-right: 7px;
+    transition: background 0.5s;
 }
 
 .subscribe_button:hover {
@@ -524,6 +578,7 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    transition: background 0.5s;
 }
 
 
@@ -547,6 +602,7 @@
 .fa-twitter {
     color: #000;
     font-size: 15px;
+    transition: color 0.5s;
 }
 
 .link:hover .fa-facebook-f {
@@ -1077,6 +1133,7 @@ $nav_bg: #F8F3F4;
     border: 1px solid $color_rose;
     align-self: center;
     margin-bottom: 65px;
+    transition: background 0.5s;
 }
 
 .add_to_cart_item_product:hover {
@@ -1089,6 +1146,7 @@ $nav_bg: #F8F3F4;
 
 .colored {
     color: $color_rose;
+    transition: color 0.5s;
 }
 
 
@@ -1187,4 +1245,113 @@ $nav_bg: #F8F3F4;
 .reg_list_item {
     line-height: 50px;
     padding-left: 10px;
+}
+
+@media (min-width:769px) and (max-width:1100px) {
+    .item_flex {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        flex-grow: 1;
+    }
+}
+
+@media (max-width:768px) {
+
+    .label_block {
+        height: 368px;
+    }
+
+    .label_logo {
+        padding-top: 138px;
+
+    }
+
+    .label_logo_img {
+        width: 312px;
+    }
+
+    .label_foto {
+        background-position: center center;
+
+    }
+
+    .item_flex {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        flex-grow: 1;
+    }
+
+    .footer_blocks {
+        flex-direction: column;
+        width: 60%;
+    }
+
+    .footer_blocks_margin_top {
+        padding-top: 50px;
+    }
+
+    .footer_info_more {
+        padding-bottom: 50px;
+    }
+
+    .greetings_and_subscribe {
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .greetings {
+        width: 360px;
+
+        padding-top: 54px;
+        padding-bottom: 54px;
+
+    }
+
+    .sub_form {
+        margin-bottom: 140px;
+
+    }
+}
+
+@media (max-width:420px) {
+    .catalogs_list {
+        display: flex;
+        flex-direction: column;
+        padding-top: 65px;
+        padding-bottom: 30px;
+    }
+
+    .dir_margin {
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+
+    .lb_foto_box {
+        display: none;
+    }
+
+    .label_logo {
+        width: 100%;
+
+        justify-content: center;
+        display: flex;
+        padding-top: 148px;
+        padding-left: 0;
+
+    }
+
+    .label_logo_img {
+        width: 263px;
+    }
+}
+
+@media (max-width:375px) {
+
+    .footer_blocks {
+        flex-direction: column;
+        width: 85%;
+    }
 }
