--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,8 @@
 .container {
     max-width: 1140px;
     margin: 0 auto;
+    align-items: center;
+
 
 }
 
@@ -353,7 +355,7 @@
     flex-grow: 1;
     margin-left: -5px;
     margin-right: -5px;
-    ;
+
 }
 
 .item {
@@ -1133,11 +1135,12 @@ $nav_bg: #F8F3F4;
 .product_banner_container {
     position: relative;
     height: 600px;
+
 }
 
 .product_banner {
     position: absolute;
-    width: 1140px;
+    width: 100%;
     z-index: 1;
     border: 1px solid #EAEAEA;
     top: -55px;
@@ -1206,7 +1209,7 @@ $nav_bg: #F8F3F4;
 }
 
 .product_banner_line_grey {
-    width: 640px;
+    width: 60%;
     height: 1px;
     background-color: #c4c4c4;
     align-self: center;
@@ -1341,7 +1344,7 @@ $nav_bg: #F8F3F4;
     padding-left: 10px;
 }
 
-@media (min-width:769px) and (max-width:1126px) {
+@media (min-width:769px) and (max-width:1148px) {
     .item_flex {
         display: flex;
         flex-wrap: wrap;
