--- a/style.scss
+++ b/style.scss
@@ -658,6 +658,18 @@
     padding-bottom: 30px;
 }
 
+.copyright_375 {
+    display: none;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FBFBFB;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 .links {
     display: flex;
     justify-content: space-between;
@@ -1454,5 +1466,24 @@ $nav_bg: #F8F3F4;
     .footer_blocks {
         flex-direction: column;
         width: 85%;
+    }
+
+    .links_box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .copyright {
+        display: none;
+    }
+
+    .copyright_375 {
+        display: block;
+    }
+
+    .links {
+        padding-top: 43px;
+
     }
 }
