--- a/style.css
+++ b/style.css
@@ -1592,5 +1592,20 @@
             flex-direction: column;
     width: 85%;
   }
+  .links_box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .links {
+    padding-top: 43px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
